--- a/src/app/dashboard/components/orders/orders.component.html
+++ b/src/app/dashboard/components/orders/orders.component.html
@@ -28,7 +28,9 @@
       </td>
       <td>
         <a matTooltip="دانلود محصول" href="{{ product.downloadLink }}">
-          <span class="material-symbols-rounded"> download </span>
+          <span class="material-symbols-rounded download-button">
+            download
+          </span>
         </a>
       </td>
     </tr>
