--- a/src/app/dashboard/components/dashboard-sales/dashboard-sales.component.html
+++ b/src/app/dashboard/components/dashboard-sales/dashboard-sales.component.html
@@ -10,23 +10,15 @@
     </tr>
     @for (sale of sales; track sale.id) {
     <tr>
-      <td>
-        {{ sale.id }}
-      </td>
+      <td>{{ sale.id }}</td>
       <td>
         <a routerLink="/store/{{ sale.url }}">
           <h4>{{ sale.title }}</h4>
         </a>
       </td>
-      <td>
-        {{ sale.buyer }}
-      </td>
-      <td>
-        {{ sale.price }}
-      </td>
-      <td>
-        {{ sale.date }}
-      </td>
+      <td>{{ sale.buyer }}</td>
+      <td>{{ sale.price.toLocaleString() }} تومان</td>
+      <td>{{ sale.date }}</td>
     </tr>
     }
   </table>
