feat(dashboard): added forms for add post

--- a/src/app/dashboard/components/dashboard-posts/dashboard-posts.component.html
+++ b/src/app/dashboard/components/dashboard-posts/dashboard-posts.component.html
@@ -2,10 +2,10 @@
   @if(posts.length>0){
   <table class="table">
     <tr>
-      <th>ID</th>
+      <th class="small-column">ID</th>
       <th>عنوان</th>
-      <th>ویرایش</th>
-      <th>حذف</th>
+      <th class="small-column">ویرایش</th>
+      <th class="small-column">حذف</th>
     </tr>
     @for (post of posts; track post.id) {
     <tr>
