--- a/src/app/dashboard/components/dashboard-posts/dashboard-posts.component.scss
+++ b/src/app/dashboard/components/dashboard-posts/dashboard-posts.component.scss
@@ -13,6 +13,10 @@
       text-align: center;
     }
 
+    .small-column {
+      width: 5rem;
+    }
+
     tr:nth-child(even) {
       background-color: var(--border-second-bg);
       border-bottom: 1px solid var(--mat-app-text-color);
@@ -25,6 +29,12 @@
 
     .delete-button {
       color: var(--danger-color);
+    }
+
+    button {
+      display: flex;
+      width: 100%;
+      justify-content: center;
     }
   }
 }
