--- a/src/app/dashboard/components/dashboard-products/dashboard-products.component.html
+++ b/src/app/dashboard/components/dashboard-products/dashboard-products.component.html
@@ -2,10 +2,10 @@
   @if(products.length>0){
   <table class="table">
     <tr>
-      <th>ID</th>
+      <th class="small-column">ID</th>
       <th>عنوان</th>
-      <th>ویرایش</th>
-      <th>حذف</th>
+      <th class="small-column">ویرایش</th>
+      <th class="small-column">حذف</th>
     </tr>
     @for (product of products; track product.id) {
     <tr>
