--- a/src/app/dashboard/components/dashboard-works/dashboard-works.component.html
+++ b/src/app/dashboard/components/dashboard-works/dashboard-works.component.html
@@ -2,10 +2,10 @@
   @if(works.length>0){
   <table class="table">
     <tr>
-      <th>ID</th>
+      <th class="small-column">ID</th>
       <th>عنوان</th>
-      <th>ویرایش</th>
-      <th>حذف</th>
+      <th class="small-column">ویرایش</th>
+      <th class="small-column">حذف</th>
     </tr>
     @for (work of works; track work.id) {
     <tr>
