fix(dashboard): add and edit post now works

--- a/src/app/dashboard/components/dashboard-posts/dashboard-posts.component.html
+++ b/src/app/dashboard/components/dashboard-posts/dashboard-posts.component.html
@@ -16,9 +16,9 @@
         </a>
       </td>
       <td>
-        <button matTooltip="ویرایش نوشته">
+        <a routerLink="edit-post/{{ post.id }}" matTooltip="ویرایش نوشته">
           <span class="material-symbols-rounded edit-button"> edit </span>
-        </button>
+        </a>
       </td>
       <td>
         <button matTooltip="حذف نوشته">
