--- a/src/styles.scss
+++ b/src/styles.scss
@@ -160,3 +160,8 @@ body {
 .mat-mdc-snack-bar-container .mat-mdc-snackbar-surface {
   background-color: inherit !important;
 }
+
+.tox-tinymce,
+.tox-tinymce-aux {
+  font-family: IRANSansX !important;
+}
