--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -126,11 +126,13 @@
           <h3>{{ product.title }}</h3>
         </a>
         <span>
-          <p>{{ product.price.toLocaleString() }} تومان</p>
-          @if (product.priceBefore) {
+          @if (product.newPrice) {
+          <p>{{ product.newPrice.toLocaleString() }} تومان</p>
           <s>
-            <small>{{ product.priceBefore.toLocaleString() }} تومان</small>
+            <small>{{ product.price.toLocaleString() }} تومان</small>
           </s>
+          }@else {
+          <p>{{ product.price.toLocaleString() }} تومان</p>
           }
         </span>
       </div>
