--- a/src/app/dashboard/components/dashboard-products/dashboard-products.component.html
+++ b/src/app/dashboard/components/dashboard-products/dashboard-products.component.html
@@ -16,9 +16,9 @@
         </a>
       </td>
       <td>
-        <button matTooltip="ویرایش محصول">
+        <a routerLink="edit-product/{{ product.id }}" matTooltip="ویرایش محصول">
           <span class="material-symbols-rounded edit-button"> edit </span>
-        </button>
+        </a>
       </td>
       <td>
         <button matTooltip="حذف محصول">
