--- a/src/app/dashboard/components/dashboard-products/dashboard-products.component.scss
+++ b/src/app/dashboard/components/dashboard-products/dashboard-products.component.scss
@@ -31,7 +31,8 @@
       color: var(--danger-color);
     }
 
-    button {
+    button,
+    a {
       display: flex;
       width: 100%;
       justify-content: center;
