--- a/src/app/dashboard/components/dashboard-products/product-form/product-form.component.scss
+++ b/src/app/dashboard/components/dashboard-products/product-form/product-form.component.scss
@@ -19,11 +19,10 @@
       position: relative;
       border: 2px dashed #aaa;
       border-radius: 6px;
-      min-height: 200px;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 48px;
+      padding: 2.5rem;
       text-align: center;
     }
 
