--- a/src/app/dashboard/components/dashboard-works/dashboard-works.component.html
+++ b/src/app/dashboard/components/dashboard-works/dashboard-works.component.html
@@ -16,9 +16,9 @@
         </a>
       </td>
       <td>
-        <button matTooltip="ویرایش نمونه کار">
+        <a routerLink="edit-work/{{ work.id }}" matTooltip="ویرایش نمونه کار">
           <span class="material-symbols-rounded edit-button"> edit </span>
-        </button>
+        </a>
       </td>
       <td>
         <button matTooltip="حذف نمونه کار">
