feat(dashboard): added confirmation modal

--- a/src/app/dashboard/components/dashboard-posts/dashboard-posts.component.html
+++ b/src/app/dashboard/components/dashboard-posts/dashboard-posts.component.html
@@ -21,7 +21,10 @@
         </a>
       </td>
       <td>
-        <button matTooltip="حذف نوشته">
+        <button
+          matTooltip="حذف نوشته"
+          (click)="deletePostModal(post.id, post.title)"
+        >
           <span class="material-symbols-rounded delete-button"> delete </span>
         </button>
       </td>
