feat(comment): added comment section shared module

--- a/src/app/store/components/product-page/product-page.component.html
+++ b/src/app/store/components/product-page/product-page.component.html
@@ -58,3 +58,5 @@
   <hr />
   <div [innerHTML]="product.description" class="product-text"></div>
 </div>
+
+<app-comment-section [comments]="comments"></app-comment-section>
