--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@
   --active-link-color: rgba(38, 103, 255, 0.3);
   --blue-button-color: #90caf9;
   --dialog-color-overlay: rgba(255, 255, 255, 0.05);
+  --comment-section-lines: #767680;
 
   body[data-theme="light"] {
     @include mat.all-component-colors(theme.$light-theme);
@@ -41,6 +42,7 @@
     --active-link-color: rgba(38, 103, 255, 0.2);
     --blue-button-color: #1976d2;
     --dialog-color-overlay: rgba(0, 0, 0, 0.37);
+    --comment-section-lines: #c6c6d0;
   }
 }
 
@@ -85,6 +87,7 @@ body {
     background: none;
     color: var(--mat-app-text-color);
     cursor: pointer;
+    font-family: IRANSansX;
   }
 }
 
