feat(loading): added loading on navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar mode="query" class="loading" [style]="loading"></mat-progress-bar>
 <mat-sidenav-container class="container" autosize>
   <mat-sidenav #drawer mode="side" position="end" opened class="sideNav">
     <header class="header">
