--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,180 +1,189 @@
-.container {
-  height: 100%;
+:host {
+  .loading {
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    display: block;
+  }
 
-  .sideNav {
-    width: 18rem;
-    box-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.07),
-      0 10px 20px -2px rgba(0, 0, 0, 0.04);
+  .container {
+    height: 100%;
 
-    .header {
-      padding: 4rem 0;
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      border-radius: 2rem 0 0 2rem;
-      align-items: center;
-      box-sizing: border-box;
-      height: 100%;
+    .sideNav {
+      width: 18rem;
+      box-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.07),
+        0 10px 20px -2px rgba(0, 0, 0, 0.04);
 
-      .top-header {
-        display: flex;
-        gap: 1rem;
-
-        .logo {
-          height: 3rem;
-        }
-        .titles {
-          display: flex;
-          flex-direction: column;
-
-          .name {
-            font-weight: bold;
-            font-size: 1.25rem;
-          }
-
-          .description {
-            font-weight: lighter;
-            font-size: 0.85rem;
-            color: var(--secondary-text-color);
-          }
-        }
-      }
-      .navigation {
+      .header {
+        padding: 4rem 0;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
-        width: 100%;
-        height: 100%;
-        box-sizing: border-box;
+        gap: 2rem;
+        border-radius: 2rem 0 0 2rem;
         align-items: center;
+        box-sizing: border-box;
+        height: 100%;
 
-        .link {
-          width: 80%;
-          justify-content: start;
-          padding: 1.5rem 1rem;
+        .top-header {
+          display: flex;
+          gap: 1rem;
 
-          &.active {
-            background: #2667ff33;
+          .logo {
+            height: 3rem;
           }
-
-          .linkText {
+          .titles {
             display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            color: var(--mat-app-text-color);
-            font-size: 1rem;
+            flex-direction: column;
 
-            .icon {
-              font-size: 2rem;
+            .name {
+              font-weight: bold;
+              font-size: 1.25rem;
+            }
+
+            .description {
+              font-weight: lighter;
+              font-size: 0.85rem;
+              color: var(--secondary-text-color);
+            }
+          }
+        }
+        .navigation {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          width: 100%;
+          height: 100%;
+          box-sizing: border-box;
+          align-items: center;
+
+          .link {
+            width: 80%;
+            justify-content: start;
+            padding: 1.5rem 1rem;
+
+            &.active {
+              background: #2667ff33;
+            }
+
+            .linkText {
+              display: flex;
+              align-items: center;
+              gap: 0.5rem;
+              color: var(--mat-app-text-color);
+              font-size: 1rem;
+
+              .icon {
+                font-size: 2rem;
+              }
             }
           }
         }
       }
     }
-  }
 
-  .sidenav-content {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+    .sidenav-content {
+      display: flex;
+      min-height: 100vh;
+      flex-direction: column;
 
-    .main {
-      width: 100%;
-      padding: 2.5rem;
-      box-sizing: border-box;
-      flex: 1 0 auto;
-
-      .mainTop {
-        display: flex;
-        justify-content: space-between;
-        padding-block-end: 2rem;
-
-        .title {
-          font-size: 1.65rem;
-        }
-
-        .toolbar {
-          background-color: var(--mat-sidenav-container-background-color);
-          padding: 0.5rem 0.75rem;
-          border-radius: 5rem;
-          display: flex;
-          gap: 0.75rem;
-          box-shadow: var(--small-shadow);
-
-          .toolbarButton {
-            display: flex;
-            border-radius: 5rem;
-          }
-        }
-      }
-
-      .outlet-content {
-        padding-block-start: 2.5rem;
+      .main {
         width: 100%;
-        display: flex;
-        justify-content: center;
+        padding: 2.5rem;
+        box-sizing: border-box;
+        flex: 1 0 auto;
 
-        .main-container {
-          width: 77.5rem;
+        .mainTop {
+          display: flex;
+          justify-content: space-between;
+          padding-block-end: 2rem;
 
-          .card {
-            border-radius: 1.5rem;
-            background: var(--card-background);
-            padding: 2rem;
+          .title {
+            font-size: 1.65rem;
+          }
+
+          .toolbar {
+            background-color: var(--mat-sidenav-container-background-color);
+            padding: 0.5rem 0.75rem;
+            border-radius: 5rem;
+            display: flex;
+            gap: 0.75rem;
             box-shadow: var(--small-shadow);
+
+            .toolbarButton {
+              display: flex;
+              border-radius: 5rem;
+            }
+          }
+        }
+
+        .outlet-content {
+          padding-block-start: 2.5rem;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+
+          .main-container {
+            width: 77.5rem;
+
+            .card {
+              border-radius: 1.5rem;
+              background: var(--card-background);
+              padding: 2rem;
+              box-shadow: var(--small-shadow);
+            }
           }
         }
       }
-    }
 
-    .footer {
-      padding: 0 2.5rem;
+      .footer {
+        padding: 0 2.5rem;
 
-      .footer-container {
-        background-color: var(--mat-sidenav-container-background-color);
-        border-start-start-radius: 2rem;
-        border-start-end-radius: 2rem;
-        padding: 1rem 2rem;
-        text-align: center;
-        box-shadow: var(--small-shadow);
+        .footer-container {
+          background-color: var(--mat-sidenav-container-background-color);
+          border-start-start-radius: 2rem;
+          border-start-end-radius: 2rem;
+          padding: 1rem 2rem;
+          text-align: center;
+          box-shadow: var(--small-shadow);
+        }
       }
     }
   }
-}
-.cart {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  .cart-item {
+  .cart {
+    padding: 1rem;
     display: flex;
+    flex-direction: column;
     gap: 1rem;
 
-    .product-image {
-      width: 5rem;
-      box-shadow: var(--small-shadow);
-      border-radius: 0.15rem;
-    }
-
-    .product-details {
-      width: 15rem;
+    .cart-item {
       display: flex;
-      gap: 0.5rem;
-      flex-direction: column;
-      justify-content: center;
-    }
+      gap: 1rem;
 
-    .delete-item {
-      display: flex;
+      .product-image {
+        width: 5rem;
+        box-shadow: var(--small-shadow);
+        border-radius: 0.15rem;
+      }
 
-      button {
-        color: var(--danger-color);
+      .product-details {
+        width: 15rem;
+        display: flex;
+        gap: 0.5rem;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      .delete-item {
+        display: flex;
+
+        button {
+          color: var(--danger-color);
+        }
       }
     }
-  }
 
-  a {
-    border-radius: 0.15rem;
+    a {
+      border-radius: 0.15rem;
+    }
   }
 }
