--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 @use "@angular/material" as mat;
 @use "./theme.scss" as theme;
 
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 :root {
   direction: rtl;
