--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,7 @@
 @use "@angular/material" as mat;
 @use "./theme.scss" as theme;
 
-@include mat.elevation-classes();
-@include mat.app-background();
+@include mat.core();
 
 :root {
   direction: rtl;
